syntax = "proto3";

option go_package = "example/another";

message AnotherRequest {
    string name = 1;
}

message AnotherReplay {
    string message = 1;
}

service AnotherService {
    rpc AnotherHello(AnotherRequest) returns (AnotherReplay);
}

